--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <h2 id="celsius" class="text-blue-50 text-7xl md:text-9xl font-serif">28°C</h2>
       </div>
       <div class="flex items-center justify-center flex-col py-8">
-        <img class="w-19 md:w-32" src="https://openweathermap.org/img/wn/04n.png" alt="" />
+        <img id="cloud" class="w-19 md:w-32" src="https://openweathermap.org/img/wn/04n.png" alt="" />
         <p id="description" class="text-blue-400 text-3xl md:text-4xl capitalize">Algumas Nuvens</p>
       </div>
       <p id="humidity" class="text-2xl md:text-3xl text-blue-700 flex items-center justify-center">Umidade: 50%</p>
